--- a/src/ManageUsers/ManageUsers.fxml
+++ b/src/ManageUsers/ManageUsers.fxml
@@ -164,7 +164,7 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="1091.0">
                             <children>
-                                <SplitPane dividerPositions="0.6173228346456693" layoutX="16.0" layoutY="6.0" orientation="VERTICAL" prefHeight="686.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <SplitPane dividerPositions="0.6187683284457478" layoutX="16.0" layoutY="6.0" orientation="VERTICAL" prefHeight="686.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <items>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="388.0" prefWidth="1103.0">
                                             <children>
@@ -186,74 +186,76 @@
                                                 </TableView>
                                             </children>
                                         </AnchorPane>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="264.0" prefWidth="1103.0">
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="289.0" prefWidth="1198.0">
                                             <children>
-                                                <HBox layoutY="-2.0" prefHeight="262.0" prefWidth="1200.0">
+                                                <HBox layoutY="-2.0" prefHeight="322.0" prefWidth="1198.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                     <children>
-                                                        <VBox prefHeight="248.0" prefWidth="441.0" spacing="18.0">
+                                                        <VBox prefHeight="248.0" prefWidth="441.0" spacing="20.0">
                                                             <padding>
-                                                                <Insets bottom="10.0" left="20.0" top="10.0" />
+                                                                <Insets bottom="10.0" left="20.0" top="5.0" />
                                                             </padding>
                                                             <children>
                                                                 <HBox prefHeight="0.0" prefWidth="446.0">
                                                                     <children>
-                                                                        <Label prefHeight="35.0" prefWidth="80.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="FIRST NAME" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="First Name" />
                                                                         <JFXTextField fx:id="tfeuFirstName" maxWidth="312.0" minWidth="204.0" prefHeight="30.0" prefWidth="310.0" stylesheets="@../styles/styles.css" />
                                                                     </children>
                                                                 </HBox>
                                                                 <HBox prefHeight="0.0" prefWidth="446.0">
                                                                     <children>
-                                                                        <Label prefHeight="30.0" prefWidth="80.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="LAST NAME" />
-                                                                        <JFXTextField fx:id="tfeuLastName" maxWidth="312.0" minWidth="204.0" prefHeight="30.0" prefWidth="306.0" stylesheets="@../styles/styles.css" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Last Name" />
+                                                                        <JFXTextField fx:id="tfeuLastName" maxWidth="312.0" minWidth="204.0" prefHeight="30.0" prefWidth="310.0" stylesheets="@../styles/styles.css" />
                                                                     </children>
                                                                 </HBox>
                                                                 <HBox prefHeight="0.0" prefWidth="446.0">
                                                                     <children>
-                                                                        <Label prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="USERNAME" />
-                                                                        <JFXTextField fx:id="tfeuUserName" maxWidth="312.0" minWidth="204.0" prefHeight="34.0" prefWidth="312.0" stylesheets="@../styles/styles.css" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Usernme" />
+                                                                        <JFXTextField fx:id="tfeuUserName" maxWidth="312.0" minWidth="204.0" prefHeight="30.0" prefWidth="310.0" stylesheets="@../styles/styles.css" />
                                                                     </children>
                                                                 </HBox>
                                                                 <HBox prefHeight="0.0" prefWidth="446.0">
                                                                     <children>
-                                                                        <Label prefHeight="30.0" prefWidth="87.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="PASSWORD" />
-                                                                        <JFXTextField fx:id="tfeuPassoword" maxWidth="312.0" minWidth="204.0" prefHeight="34.0" prefWidth="312.0" stylesheets="@../styles/styles.css" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Password" />
+                                                                        <JFXTextField fx:id="tfeuPassoword" maxWidth="312.0" minWidth="204.0" prefHeight="30.0" prefWidth="310.0" stylesheets="@../styles/styles.css" />
                                                                     </children>
                                                                 </HBox>
                                                                 <HBox prefHeight="0.0" prefWidth="446.0">
                                                                     <children>
-                                                                        <Label prefHeight="30.0" prefWidth="86.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="EMAIL" />
-                                                                        <JFXTextField fx:id="tfeuEmail" maxWidth="312.0" minWidth="204.0" prefHeight="34.0" prefWidth="312.0" stylesheets="@../styles/styles.css" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Email" />
+                                                                        <JFXTextField fx:id="tfeuEmail" maxWidth="312.0" minWidth="204.0" prefHeight="30.0" prefWidth="310.0" stylesheets="@../styles/styles.css" />
                                                                     </children>
                                                                 </HBox>
                                                             </children>
                                                         </VBox>
-                                                        <VBox prefHeight="248.0" prefWidth="350.0" spacing="10.0">
+                                          <Separator orientation="VERTICAL" prefHeight="200.0" />
+                                                        <VBox alignment="CENTER" prefHeight="207.0" prefWidth="374.0" spacing="5.0">
                                                             <children>
                                                                 <HBox prefHeight="0.0" prefWidth="446.0">
                                                                     <children>
-                                                                        <Label prefHeight="34.0" prefWidth="178.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="PHONE NUMBER" />
-                                                                        <JFXTextField fx:id="tfeuPhoneNumber" maxWidth="312.0" minWidth="204.0" prefHeight="34.0" prefWidth="312.0" stylesheets="@../styles/styles.css" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Phone No." />
+                                                                        <JFXTextField fx:id="tfeuPhoneNumber" maxWidth="312.0" minWidth="186.0" prefHeight="30.0" prefWidth="186.0" stylesheets="@../styles/styles.css" />
                                                                     </children>
                                                                 </HBox>
                                                                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="5.0">
                                                                     <children>
-                                                                        <Label prefHeight="29.0" prefWidth="80.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Gender" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Gender" />
                                                                         <JFXCheckBox fx:id="checkboxeuMale" onAction="#GenderSelection" prefHeight="38.0" prefWidth="101.0" text="Male" />
                                                                         <JFXCheckBox fx:id="checkboxeuFemale" onAction="#GenderSelection" prefHeight="36.0" prefWidth="100.0" text="Female" />
                                                                     </children>
                                                                 </HBox>
                                                                 <HBox prefHeight="42.0" prefWidth="317.0">
                                                                     <children>
-                                                                        <Label prefHeight="37.0" prefWidth="98.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="BIRTHDATE" />
+                                                                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="88.0" styleClass="blue-label" stylesheets="@../styles/styles.css" text="Birthdate" />
                                                                         <JFXDatePicker fx:id="dpeuBirthdate" />
                                                                     </children>
                                                                 </HBox>
-                                                                <JFXTextArea fx:id="taeuAdditionalInfo" maxWidth="377.0" minWidth="377.0" prefHeight="190.0" prefWidth="377.0" promptText="Additional Info" style="-fx-background-color: F4F4F4;" styleClass="text-field" stylesheets="@../styles/styles.css" />
+                                                                <JFXTextArea fx:id="taeuAdditionalInfo" maxWidth="377.0" minWidth="187.0" prefHeight="136.0" prefWidth="354.0" promptText="Additional Info" style="-fx-background-color: F4F4F4;" styleClass="text-field" stylesheets="@../styles/styles.css" />
                                                             </children>
                                                             <padding>
-                                                                <Insets left="20.0" top="10.0" />
+                                                                <Insets bottom="5.0" top="5.0" />
                                                             </padding>
                                                         </VBox>
+                                          <Separator orientation="VERTICAL" prefHeight="262.0" prefWidth="12.0" />
                                                         <VBox alignment="CENTER" prefHeight="262.0" prefWidth="355.0" spacing="5.0">
                                                             <children>
                                                                 <HBox prefHeight="57.0" prefWidth="307.0" spacing="5.0">
@@ -283,7 +285,7 @@
                                                                                 </ImageView>
                                                                             </graphic>
                                                                         </JFXButton>
-                                                                        <JFXButton fx:id="btneuPrintAll" onAction="#btneuPrintAllAction"  contentDisplay="RIGHT" opacity="0.71" prefHeight="92.0" prefWidth="162.0" styleClass="lgBtn" stylesheets="@../styles/styles.css" text="Print All">
+                                                                        <JFXButton fx:id="btneuPrintAll" contentDisplay="RIGHT" onAction="#btneuPrintAllAction" opacity="0.71" prefHeight="92.0" prefWidth="162.0" styleClass="lgBtn" stylesheets="@../styles/styles.css" text="Print All">
                                                                             <graphic>
                                                                                 <ImageView fitHeight="24.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                                                                                     <image>
@@ -299,12 +301,15 @@
                                                                         <DropShadow />
                                                                     </effect>
                                                                 </JFXButton>
-                                                                <JFXButton fx:id="btneuDeleteUser"  onAction="#btneuDeleteUserAction" prefHeight="43.0" prefWidth="305.0" styleClass="red-btn" stylesheets="@../styles/styles.css" text="Delete User">
+                                                                <JFXButton fx:id="btneuDeleteUser" onAction="#btneuDeleteUserAction" prefHeight="43.0" prefWidth="305.0" styleClass="red-btn" stylesheets="@../styles/styles.css" text="Delete User">
                                                                     <effect>
                                                                         <InnerShadow />
                                                                     </effect>
                                                                 </JFXButton>
                                                             </children>
+                                             <padding>
+                                                <Insets bottom="5.0" />
+                                             </padding>
                                                         </VBox>
                                                     </children>
                                                 </HBox>
