--- a/src/ProfilePage/profilepage.fxml
+++ b/src/ProfilePage/profilepage.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.effect.DropShadow?>
@@ -87,17 +88,20 @@
                      </children>
                   </HBox>
                </children>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
             </VBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
                   <VBox alignment="CENTER" prefHeight="370.0" prefWidth="372.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <JFXTextField fx:id="tfEmail" focusColor="#00add8" maxWidth="369.0" minWidth="229.0" prefHeight="72.0" prefWidth="369.0" promptText="Email" stylesheets="@../styles/styles.css" unFocusColor="#868282" />
-                        <JFXTextField fx:id="tfPhoneNumber" focusColor="#00add8" maxWidth="385.0" minWidth="229.0" prefHeight="67.0" prefWidth="372.0" promptText="Phone Number" stylesheets="@../styles/styles.css" unFocusColor="#868282" />
-                        <JFXTextField fx:id="tfAdditionalInfo" focusColor="#00add8" maxWidth="373.0" minWidth="229.0" prefHeight="115.0" prefWidth="372.0" promptText="Additional Info" stylesheets="@../styles/styles.css" unFocusColor="#868282" />
+                        <JFXTextField fx:id="tfEmail" focusColor="#00add8" maxWidth="387.0" minWidth="229.0" prefHeight="50.0" prefWidth="370.0" promptText="Email" stylesheets="@../styles/styles.css" unFocusColor="#868282" />
+                        <JFXTextField fx:id="tfPhoneNumber" focusColor="#00add8" maxWidth="385.0" minWidth="229.0" prefHeight="50.0" prefWidth="370.0" promptText="Phone Number" stylesheets="@../styles/styles.css" unFocusColor="#868282" />
+                        <JFXTextField fx:id="tfAdditionalInfo" focusColor="#00add8" maxWidth="373.0" minWidth="229.0" prefHeight="115.0" prefWidth="370.0" promptText="Additional Info" stylesheets="@../styles/styles.css" unFocusColor="#868282" />
                         <HBox alignment="CENTER" prefHeight="68.0" prefWidth="372.0">
                            <children>
-                              <JFXButton fx:id="btnSaveChanges" prefHeight="59.0" prefWidth="372.0" styleClass="blue-btn" stylesheets="@../styles/styles.css" text="Save Changes">
+                              <JFXButton fx:id="btnSaveChanges" onAction="#saveChanges" prefHeight="59.0" prefWidth="372.0" styleClass="blue-btn" stylesheets="@../styles/styles.css" text="Save Changes">
                                  <effect>
                                     <DropShadow />
                                  </effect>
