--- a/src/Dashboard/Dashboard.fxml
+++ b/src/Dashboard/Dashboard.fxml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="AnchorPane" prefHeight="721.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dashboard.DashboardController">
    <children>
-      <PieChart fx:id="pcSkills" layoutY="150.0" prefHeight="400.0" prefWidth="400.0" title="Skills" />
-      <PieChart fx:id="pcRanks" layoutX="800.0" layoutY="150.0" prefHeight="400.0" prefWidth="400.0" title="Ranks" />
-      <PieChart fx:id="pcGender" layoutX="400.0" layoutY="150.0" prefHeight="400.0" prefWidth="400.0" title="Gender" />
+      <PieChart fx:id="pcSkills" layoutY="150.0" prefHeight="400.0" prefWidth="400.0" title="Skills">
+         <effect>
+            <Glow />
+         </effect></PieChart>
+      <PieChart fx:id="pcGender" layoutX="400.0" layoutY="150.0" prefHeight="400.0" prefWidth="400.0" title="Gender">
+         <effect>
+            <Glow />
+         </effect></PieChart>
+      <PieChart fx:id="pcRanks" layoutX="800.0" layoutY="150.0" prefHeight="400.0" prefWidth="400.0" title="Ranks">
+         <effect>
+            <Glow />
+         </effect>
+      </PieChart>
    </children>
 </AnchorPane>
